# PeekAPI

./: .gitignore  LICENSE  README.md  cliff.toml  config.toml  justfile  peekapi.spec  pyproject.toml  run.py  version_info.txt
.github/workflows/: ci.yml  release.yml
docs/: developer_overview.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
memory-bank/tasks/: TASK001-linux-support.md  TASK002-config-msgspec-refactor.md  TASK003-loguru-logging.md  TASK004-unit-tests.md  TASK005-packaging-optimization.md  TASK006-soundfile-refactor.md  TASK007-flask-to-fastapi.md  TASK008-remove-parse-helpers.md  TASK009-recorder-optimization.md  TASK010-github-release-exe.md  TASK011-ci-lint-fixes.md  TASK012-tray-icon-not-showing.md  TASK013-add-idle-endpoint.md  TASK014-fix-gettickcount-overflow.md  TASK015-add-system-info.md  _index.md
peek_api/: README.md  config.py  config.toml  run.py  system_tray.py
scripts/: README.md  __init__.py  test_all.py  test_check.py  test_record.py  test_screenshot.py
src/: config.py  config.toml  record.py  server.py  system_tray.py
src/peekapi/: __init__.py  __main__.py  cli.py  config.py  constants.py  idle.py  logging.py  record.py  screenshot.py  server.py  system_info.py  system_tray.py
tests/: __init__.py
tests/integration/: conftest.py  test_record_real.py  test_screenshot_real.py
tests/unit/: conftest.py  test_config.py  test_constants.py  test_idle.py  test_record.py  test_screenshot.py  test_server.py  test_system_info.py
