[project]
name = "peekapi"
version = "0.1.0"
description = ""
authors = [
    {name = "Misty", email = "74812967+Misty02600@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pillow>=11.1.0,<12.0.0",
    "mss>=10.0.0,<11.0.0",
    "flask>=3.1.0,<4.0.0",
    "pystray>=0.19.5,<0.20.0",
    "winotify>=1.1.0,<2.0.0",
    "wave>=0.0.2,<0.0.3",
    "soundcard>=0.4.3,<0.5.0",
    "numpy>=2.0.0,<3.0.0",
    "msgspec>=0.20.0",
    "loguru>=0.7.3",
]

[project.scripts]
peekapi = "peekapi.server:start_app"

[dependency-groups]
dev = [
    "pyinstaller>=6.12.0",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
